Style fixes cont'd (2)